--- a/tf/windows/destroy.yml
+++ b/tf/windows/destroy.yml
@@ -10,3 +10,7 @@
         project_path: ./aws/
         state: absent
         force_init: true
+        backend_config:
+          region: us-east-2
+          bucket: deparris-tfstate
+          key: ansible-automates/windows.tfstate
