--- a/tf/linux/apply.yml
+++ b/tf/linux/apply.yml
@@ -10,7 +10,9 @@
         project_path: "./aws/"
         state: present
         force_init: true
-        backend_config:
-          region: us-east-2
-          bucket: deparris-tfstate
-          key: ansible-automates/linux.tfstate
+        backend_config_files:
+          - "{{ lookup('ansible.builtin.env', 'TF_BACKEND_CONFIG_FILE') }}"
+        # backend_config:
+        #   region: us-east-2
+        #   bucket: deparris-tfstate
+        #   key: ansible-automates/linux.tfstate
